# docking_simulation_helpers

./: .gitignore  Makefile  Makefile.ps1  NAG_2_2.sdf  README.md  analysis.ipynb  docker-compose.yml  genome2.fa  graph_dgs.ipynb  graph_fuc_and_apo.ipynb  pyproject.toml
DeepGlycanSite/: Dockerfile  requirements.txt
User/: OG29094-gangliotriose.sdf  OG29094-gangliotriose_2.sdf  cbm3-gd2.txt.pt  example.txt.pt
User/fucoidan_disaccharide_structures/: fuc(a1-3)fuc(2S)_2.sdf  fuc(a1-4)fuc(2S).sdf
binding_site_files/: IQZ2_sites.txt
core_structures/: Mucin Core 1 Structure.mol
docking_sim_gui/: Dockerfile
docking_sim_gui/backend/: Dockerfile  requirements.txt
docking_sim_gui/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
docking_simulation_helpers/: __init__.py  __main__.py  cli.py
docking_simulation_helpers/commands/: deepglycansite.py  docker_manipulations.py  file_operations.py  setup_commands.py
docking_simulation_helpers/data/: config.db.bak  config.db.dir  initdata.yaml
docking_simulation_helpers/modules/: data_store.py  docker_handler.py
docking_simulation_helpers/prod_network/: docker-compose.yml
docking_simulations_gui/: Dockerfile
docking_simulations_gui/docking_sim_gui/: package-lock.json  package.json
janique_run/: binding_probabilities.xlsx  cbm3-gd2.txt  example.txt  gangliotriose.sdf
nginx/: nginx.conf
projects/FucWf4/: compose.yml  perform_deepglycansite.ipynb  (+1 more)
single_run_scripts/: __init__.py
test_bench/: Dockerfile  test_server.sh
workbench/: convert_to_req.sh
(+20 files in other folders)
