[project]
name = "docking-simulation-helpers"
version = "0.1.1"
description = "A Command-Line Interface for interacting with a series of programs for molecular docking and molecular dynamics simulations."
authors = [
    {name = "Davide Rossotto",email = "drossotto@crimson.ua.edu"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "typer[all] (>=0.15.1,<0.16.0)",
    "docker (>=7.1.0,<8.0.0)",
    "logger (>=1.4,<2.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "importlib (>=1.0.4,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "python-on-whales (>=0.75.1,<0.76.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
include = [
    "data/*",
    "prod_network/*"
]


[project.scripts]
docking-cli = "docking_simulation_helpers.cli:app"